--- a/OtoTamir.WEBUI/Views/Shared/Components/_AddBankCardViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_AddBankCardViewComponentPartial/Default.cshtml
@@ -58,26 +58,13 @@
                         <input asp-for="Debt" type="number" class="form-control shadow-sm" step=".01" placeholder="0.00" />
                     </div>
 
-                    @* <div class="col-md-6">
-                        <label asp-for="BillingDate" class="form-label fw-semibold">Hesap Kesim Günü</label>
-                        <div class="input-group shadow-sm">
-                            <span class="input-group-text bg-light"><i class="bi bi-calendar-event"></i></span>
-                            <select asp-for="BillingDate" class="form-select">
-                                <option value="">Seçiniz</option>
-                                @for (int i = 1; i <= 31; i++)
-                                {
-                                    <option value="@i">Her ayın @i. günü</option>
-                                }
-                            </select>
-                        </div>
-                        <small class="text-muted">Ayın kaçında hesap kesiliyor?</small>
-                    </div> *@
+                   
 
                     <div class="col-md-6">
-                        <label asp-for="DueDate" class="form-label fw-semibold">Son Ödeme Günü</label>
+                        <label asp-for="BillingDay" class="form-label fw-semibold">Hesap Kesim Günü</label>
                         <div class="input-group shadow-sm">
                             <span class="input-group-text bg-light"><i class="bi bi-calendar-check"></i></span>
-                            <select asp-for="DueDate" class="form-select">
+                            <select asp-for="BillingDay" class="form-select">
                                 <option value="">Seçiniz</option>
                                 @for (int i = 1; i <= 31; i++)
                                 {
